syntax = "proto3";

package collector_v1;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/singl3focus/stats-project/collector/pkg/collector_v1;collector_v1";

service CollectorServiceV1 {
    // Добавление нового вызова
    rpc AddCall(AddCallRequest) returns (AddCallResponse);

    // Получение статистики вызовов
    rpc GetCalls(GetCallsRequest) returns (GetCallsResponse);

    // Добавление нового сервиса
    rpc AddService(AddServiceRequest) returns (AddServiceResponse);
}

message AddCallRequest {
    int32 user_id = 1;
    int32 service_id = 2;
}
  
message AddCallResponse {
    bool success = 1;
    string error = 2;
}
  
message GetCallsRequest {
    google.protobuf.Int32Value user_id = 1;     // Опциональный фильтр по пользователю
    google.protobuf.Int32Value service_id = 2;  // Опциональный фильтр по сервису
    google.protobuf.Int32Value page = 3;        // Опциональный фильтр Номер страницы (по умолчанию 1)
    google.protobuf.Int32Value per_page = 4;    // Опциональный фильтр Количество записей на странице (по умолчанию 10)
    string sort = 6;                            // Направление сортировки (ASC/DESC) (по умолчанию ASC)
}

message CallStat {
    int32 user_id = 1;
    int32 service_id = 2;
    int32 count = 3;
}

message GetCallsResponse {
    repeated CallStat stats = 1;
    int32 total = 2;          
    int32 current_page = 3;
    int32 per_page = 4;
    string error = 5;
}


message AddServiceRequest {
    string name = 1;
    string description = 2;
}

message AddServiceResponse {
    int32 service_id = 1;    
    bool success = 2;
    string error = 3;
}